* Applied patch by Olivier: fixed sending wrong signal to a custom signal   handler. This closes ticket #3265, thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28852 a95241bf-73f2-0310-859d-f6bbb57e9c96